<resources>
    <string name="app_name">Open Sesame</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add_credentials">Add Credentials</string>
    <string name="edit_credentials">Edit Credentials</string>
    <string name="group_name">Group Name <font color='#f9154a'>*</font></string>
    <string name="username">Username <font color='#f9154a'>*</font></string>
    <string name="password">Password <font color='#f9154a'>*</font></string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <string name="username1">Username</string>
    <string name="password1">Password</string>

    <string name="developer_info">Developer Info</string>
    <string name="dev_name">Rammohan Locharla</string>
    <string name="code_name">code name</string>
    <string name="dev_code_name">Jungle Mystic</string>
    <string name="about_me">About Me</string>
    <string name="dev_about">CA Aspirant by academics &amp; Android Kotlin Developer by passion. \n \n Pet Lover, Music Lover, Foodie, sometimes cook.</string>

    <string name="delete">Delete</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_message">Are you sure you want to Delete…?</string>

    <string name="search_group">Search here…</string>
</resources>